fix: ddpm for omegaconfig and hydra instantiate

--- a/config/data/guide_mnist.yaml
+++ b/config/data/guide_mnist.yaml
@@ -1,13 +1,15 @@
-transform_config:
-  _target_: torchvision.transforms.Compose
-  transforms:
-    - _target_: torchvision.transforms.Resize
-      size: 16
-    - _target_: torchvision.transforms.ToTensor
-
-dataset_config:
+dataset:
   _target_: dataset.GuidedMNISTDataset
   _partial_: true
   root: './MNIST'
-  transform: {transform_config}
-  guide_slice: (slice(0, 8), slice(0, 8))
+  transform:
+    _target_: torchvision.transforms.Compose
+    transforms:
+      - _target_: torchvision.transforms.Resize
+        size: 16
+      - _target_: torchvision.transforms.ToTensor
+  guide_slice:
+    - 0
+    - 8
+    - 0
+    - 8
