--- a/config/model/base.yaml
+++ b/config/model/base.yaml
@@ -1,4 +1,4 @@
-unet_config:
+unet:
   _target_: unet.UNetModel
   _partial_: true
   model_channels: 128
@@ -13,4 +13,5 @@ unet_config:
     - 4
     - 8
   num_heads: 8
-  num_classes: None # 10 classes for MNIST or None for unconditional
+  num_classes: 10 # 10 classes for MNIST label condition or None for unconditional
+  resblock_updown: true
